     57- allow mseval(M, t_MAT)
     58- change 'debugmem' default value to 1;
         no memory-related message at value 0 (not recommended under gp).
BA   59- V=galoisfixedfield(,,2): return V[1] in the same variable as the
         coeffs of V[3] instead of P.
     60- numtoperm now returns a t_VECSMALL (so that results can be
         multiplied as permutations, etc.), no longer a ZV
     61- improve Fp_sqrt for p = 5 (mod 8) [Atkin's formula]
     62- improved matrixqz(,‐1 or -2) by using matkermod
     63- The functions psdraw, psploth and psplothraw and the default psfile
         are obsolete. Use one of plotexport, plothexport or plothrawexport
         with format "ps" and write the result to file.
AP   64- new implementation of matsolvemod; old matsolvemod0 is deprecated
     65- plotcolor(w,c) now returns the [R,G,B] value attached to c
     66- allow plotdraw(w) for plotdraw([w,0,0])
     67- allow isprime(n) to use ECPP
     68- isprime(n,1) no longer outputs a certificate, use primecert(n)
     69- isprime(n,1) no longer uses APRCL for large prime divisors of n-1
         (pure Pocklington-Lehmer-Selfridge); use primecert(n).
     70- getrand() encoded results in a way that depended on 32bit/64bit arch
     71- thue(p, rhs) is much easier when p has no real roots; don't insist
         on computing bnfinit(p) in this case [#2003]
     72- use Newton in expm1
     73- change rnfpolredabs so that it outputs a canonical polynomial. As a
         result, the function is no longer Obsolete.
     74- allow polrecip(scalar x) -> x

  Removed
      1- file 'MACHINES' (no longer maintained)
      2- useless argument nf in ZC_nfval, ZC_nfvalrem, pr_equal, ZC_prdvd
      3- useless flag argument in polrootsmod
      4- [libpari] useless function Flx_roots_naive; rootmod and rootmod2
         are now an alias for polrootsmod (both have been deprecated for years)
         rootmod0 is just as obsolete.