@@ -753,8 +753,7 @@ exists a large number of arithmetic functions; see the list by typing
 \kbd{?4}. We have already seen several, such as \kbd{factor}. Note that
 \kbd{factor} handles not only integers, but also univariate polynomials.
 Type for example \kbd{factor(x\pow 200 - 1)}. You can also ask to factor a
-polynomial modulo a prime $p$ (\kbd{factormod}) and even in a finite field
-which is not a prime field (\kbd{factorff}).
+polynomial modulo a finite field or a number field !
 
 Evidently, you have functions for computing GCD's (\kbd{gcd}), extended GCD's
 (\kbd{bezout}), solving the Chinese remainder theorem (\kbd{chinese}) and so
@@ -1341,55 +1340,49 @@ Similarly, type
 @eprog\noindent which show the different factorizations, this time over
 $\F_p$. In fact, even better: type successively
 \bprog
-  t = 't;   \\@com we want \kbd{t} to be a free variable
-  T = ffinit(3,3, t)
-  pol2 = subst(T, t, x)
-  fq = factorff(pol2, 3, T)
-  centerlift( lift(fq) )
+  T = ffinit(3,3, 't) \\@com we want \kbd{t} to be a free variable
+  fq = factormod(pol, [T,3])
+  liftall(fq)
 @eprog\noindent
 \kbd{T}, which is actually \kbd{t\pow 3 + t\pow 2 + t + 2} (with intmod
 coefficients), is defined above to be an irreducible polynomial of degree $3$
-over $\F_3$. This code snippet factors the polynomial \kbd{pol2} over the
+over $\F_3$. This code snippet factors the polynomial \kbd{pol} over the
 finite field $\F_3[t]/(T)$. This is of course a form of the field $\F_{27}$.
-We know that Gal$(\F_{27}/\F_3)$ is cyclic of order 3 generated by the
-Frobenius homomorphism $u\mapsto u^3$, and the roots that we have found give
-the action of the powers of the Frobenius on \kbd{t}. (If you do not know
-what I am talking about, please try some examples, it's not so hard to figure
-out.) We took pain above to factor a polynomial in the variable $x$ over a
-finite field defined by a polynomial in $t$, even though they were apparently
-one and the same. There is a crucial rule in all routines involving relative
-extensions: the variable attached to the base field is required to have
-lower priority than the variables of polynomials whose coefficients are taken
-in that base field. Have a look at the section on \emph{Variable priorities}
-in the user's manual (see ``The GP programming language''). A simpler way
-to accomplish the above, using \typ{FFELT}s is
+Note that we introduced a new variable $t$ to express elements in
+this non-prime field. There is a crucial rule in all routines involving
+relative extensions: the variable attached to the base field is required to
+have lower priority than the variables of polynomials whose coefficients are
+taken in that base field. Have a look at the section on \emph{Variable
+priorities} in the user's manual (see ``The GP programming language''). A
+simpler way to accomplish the above, using \typ{FFELT}s is
 \bprog
   g = ffgen(3^3, 't);
-  T = subst(g.mod, t, x);
-  factor(T * g^0)
+  factormod(pol, g)
+@eprog\noindent It is also possible to use \kbd{factor}:
+\bprog
+  factormod(pol * g^0)
 @eprog\noindent Multiplying by $g^0 = 1$ seems to do ``nothing'', but it has
-the interesting effect of mapping all coefficients of $T$ to $\F_{27}$. The
+the interesting effect of mapping all coefficients to $\F_{27}$. The
 generic function \kbd{factor} then does the right thing. (Typing
-\kbd{factor(T)} directly would factor it over $\Q$, not what we wanted.)
+\kbd{factor(pol)} directly would factor it over $\Q$, not what we wanted.)
 
 Similarly, type
 \bprog
-  pol3 = x^4 - 4*x^2 + 16
-  fn = lift( factornf(pol3, t^2 + 1) )
-@eprog\noindent and we get the factorization of the polynomial \kbd{pol3}
+  pol2 = x^4 - 4*x^2 + 16
+  fn = lift( factornf(pol2, t^2 + 1) )
+@eprog\noindent and we get the factorization of the polynomial \kbd{pol2}
 over the number field defined by $t^2+1$, i.e.~over $\Q(i)$. Without the
 \kbd{lift}, the result would involve number field elements as \typ{POLMOD}s
 of the form \kbd{Mod(1+t, t\pow2+1)}, which are more explicit but much less
 readable.
 \smallskip
 
-To summarize, in addition to being able to factor integers, you can
-factor polynomials over $\C$ and $\R$ using \kbd{polroots},
-over $\F_p$ using \kbd{factormod}, over $\F_{p^k}$ using \kbd{factorff},
-over $\Q_p$ using \kbd{factorpadic}, over $\Q$ using \kbd{factor}, and over
-number fields using \kbd{factornf} or \kbd{nffactor}. Note however
-that \kbd{factor} itself will try to guess intelligently over which ring you
-want to factor: try
+To summarize, in addition to being able to factor integers, you can factor
+polynomials over $\C$ and $\R$ using \kbd{polroots}, over finite fields using
+\kbd{factormod}, over $\Q_p$ using \kbd{factorpadic}, over $\Q$ using
+\kbd{factor}, and over number fields using \kbd{factornf} or \kbd{nffactor}.
+Note however that \kbd{factor} itself will guess intelligently over
+which ring you want to factor: try
 \bprog
   pol = x^2 + 1;
   factor(pol)
@@ -1398,21 +1391,21 @@ want to factor: try
   factor(pol * (1 + 0.*I))
   factor(pol * Mod(1,2))
   factor(pol * Mod(1, Mod(1,3)*(t^2+1)))
-@eprog
-
+  pol2 = x^2 + y^2;
+  factor(pol2)
+  factor(pol2 * Mod(1,5))
+@eprog\noindent
 In the present version \vers{}, it is not possible to factor over other
-rings than the ones mentioned above. For example \kbd{gp} cannot directly
-factor multivariate polynomials, although it is not too hard to write a
-simple-minded Kronecker's substitution to reduce to the univariate case.
-(Exercise!) Other functions related to factoring are \kbd{padicappr},
-\kbd{polrootsmod}, \kbd{polrootspadic}, \kbd{polsturm}. Play with them a
-little.
+base rings than the ones mentioned above, but multivariate polynomials over
+those rings are allowed as shown in the last examples. Other functions
+related to factoring are \kbd{padicappr}, \kbd{polrootsmod},
+\kbd{polrootspadic}, \kbd{polsturm}. Play with them a little.
 
 Finally, type
 \bprog
-  polsym(pol3, 20)
-@eprog\noindent where \kbd{pol3} was defined above. This gives the sum of the
-$k$-th powers of the roots of \kbd{pol3} up to $k=20$, of course computed
+  polsym(pol2, 20)
+@eprog\noindent where \kbd{pol2} was defined above. This gives the sum of the
+$k$-th powers of the roots of \kbd{pol2} up to $k=20$, of course computed
 using Newton's formula and not using \kbd{polroots}. You notice that every
 odd sum is zero (expected, since the polynomial is even), but also that
 the signs follow a regular pattern and that the (non-zero) absolute values
