@@ -4,9 +4,9 @@ C-Name: nffactormod
 Obsolete: 2016-09-18
 Prototype: GGG
 Help: nffactormod(nf,Q,pr): this routine is obsolete, use nfmodpr and
- factorff. Factor polynomial Q modulo prime ideal pr
+ factormod. Factor polynomial Q modulo prime ideal pr
  in number field nf.
-Doc: this routine is obsolete, use \kbd{nfmodpr} and \kbd{factorff}.
+Doc: this routine is obsolete, use \kbd{nfmodpr} and \kbd{factormod}.
 
  Factors the univariate polynomial $Q$ modulo the prime ideal \var{pr} in
  the number field $\var{nf}$. The coefficients of $Q$ belong to the number
